--- a/index.html
+++ b/index.html
@@ -3,16 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ski vs. The Multiverse (GitHub Edition)</title>
+    <title>Ski vs. The Multiverse</title>
     <style>
         body {
             text-align: center;
+            background-color: #000000;
+            color: white;
+        }
+        p {
+            font-size: 24px;
+        }        a {
+            color: white;
+            background-color: #000000;
+            padding: 5px 10px;
+            text-decoration: none;
+        }
+        a:visited {
+            color: white;
+        }
+        a:hover {
+            opacity: 0.8;
+        }
+        .video-container {
+            margin-top: 40px;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+        }
+        iframe {
+            width: 80%;
+            max-width: 800px;
+            height: 450px;
+            border: none;
+            border-radius: 8px;
         }
     </style>
 </head>
 <body>
-    <h1>Ski vs. The Multiverse</h1>
-    <a href="https://drive.google.com">Google Drive</a>
+    <img width="25%" height="auto" src="img/ski_logo.png" alt="Ski vs. The Multiverse logo">
+    <div>
+        <p>  
+            <a href="https://drive.google.com/drive/u/0/folders/1f2vb2xTKqE3F2omhAfcLLgEeNR-SxEd0">Google Drive</a>  
+            <a href="GAMEBANANA_URL_HERE">GameBanana (Unavailable)</a>  
+            <a href="https://www.youtube.com/watch?v=CEutsQ2Ns4A">YouTube</a>
+            <a href="pack-downloads.html">Mod Pack Downloads</a>
+        </p>
+    </div>
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/CEutsQ2Ns4A" allowfullscreen></iframe>
+    </div>
 </body>
-
 </html>
