Update index.html to comment out downloads link
Commented out the Mod & Pack Downloads link.

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
         <p>  
             <a href="https://drive.google.com/drive/u/0/folders/1f2vb2xTKqE3F2omhAfcLLgEeNR-SxEd0">FLP Downloads</a>  
             <a href="videos.html">YouTube Videos</a>
-            <a href="downloads.html">Mod & Pack Downloads</a>
+           <!--<a href="downloads.html">Mod & Pack Downloads</a>-->
         </p>
     </div>
     <div class="video-container">
         <iframe src="https://www.youtube.com/embed/RE74CU32Tn8" allowfullscreen></iframe>
     </div>
 </body>
+
 </html>
